--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,13 @@ uuid = "c665481f-c81f-4649-8d1e-3441473abd7e"
 authors = ["PatXue <95881915+PatXue@users.noreply.github.com> and contributors"]
 version = "1.0.0-DEV"
 
+[deps]
+Carlo = "780c37f4-4e5a-43de-9e79-65c261e525a4"
+HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+
 [compat]
+Carlo = "0.2.4"
+HDF5 = "0.17.2"
 julia = "1.6.7"
 
 [extras]
