--- a/Project.toml
+++ b/Project.toml
@@ -6,11 +6,13 @@ version = "1.0.0-DEV"
 [deps]
 Carlo = "780c37f4-4e5a-43de-9e79-65c261e525a4"
 HDF5 = "f67ccb44-e63f-5c2f-98bd-6dc0ccc4ba2f"
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Random = "9a3f8284-a2c9-5f02-9a11-845980a1fd5c"
 
 [compat]
 Carlo = "0.2.4"
 HDF5 = "0.17.2"
+LinearAlgebra = "1.11.0"
 Random = "1.11.0"
 julia = "1.6.7"
 
